--- a/book.css
+++ b/book.css
@@ -142,7 +142,7 @@ tr td {
   border-bottom: .5px solid lightgray;
 }
 
-@media screen {
+@media only screen {
   body {
     background: lightgray;
   }
