--- a/book.css
+++ b/book.css
@@ -1,6 +1,6 @@
 * {
-  /* border: 1px solid lightgray; */
-    box-sizing: border-box;
+/* border: 1px solid lightgray; */
+  box-sizing: border-box;
 }
 
 @font-face {
@@ -16,177 +16,196 @@
 }
 
 @font-face {
-  font-family: 'Sebaldus-Gotisch';
-  src: url('fonts/Sebaldus-Gotisch.ttf') format('truetype');
-  font-weight: normal;
+font-family: 'Sebaldus-Gotisch';
+src: url('fonts/Sebaldus-Gotisch.ttf') format('truetype');
+font-weight: normal;
 }
 
 .colstwo {
-  column-count: 2;
+column-count: 2;
 }
 
 html {
-  color: black;
-  counter-reset: h2-counter;
-  font-family: 'Sebaldus-Gotisch';
-  font-size: 10pt;
+color: black;
+counter-reset: h2-counter;
+font-family: 'Sebaldus-Gotisch';
+font-size: 10pt;
 }
 body {
-  font-family: 'liberationsans';
-  margin: 0;
+font-family: 'liberationsans';
+margin: 0;
 }
 
 p {
-  margin-top: 0px;
-  line-height: 1.3;
-  text-align: justify;
+margin-top: 0px;
+line-height: 1.3;
+text-align: justify;
 }
 h1 {
-  display: none;
+display: none;
 }
 
 h3 {
-  margin-bottom: 0px;
+margin-bottom: 0px;
 }
 
 section {
-  break-after: always;
+break-after: always;
+position: relative;
 }
 
 ol {
-  margin-top: 0;
-  padding-left: 25px;
+margin-top: 0;
+padding-left: 25px;
 }
 
 li {
-  margin-top: .25em;
-  margin-bottom: .25em;
+margin-top: .25em;
+margin-bottom: .25em;
 }
 
 ol > li::marker {
-  font-weight: bold;
+font-weight: bold;
 }
 
 .breakbefore {
-  break-before: always;
+break-before: always;
 }
 
 .breakafter {
-  break-after: always;
+break-after: always;
 }
 
 .clean {
-  page: clean;
+page: clean;
 }
 
 .background img {
-  /* top: -.375in; */
-  /* height: 8.75in; */
-  /* left: -.375in; */
-  /* margin: 0; */
-  /* max-width: none; */
-  /* object-fit: cover; */
-  /* /\* page: full; *\/ */
-  /* position: absolute; */
-  /* width: 5.75in; */
-  /* z-index: -1; */
+/* top: -.375in; */
+/* height: 8.75in; */
+/* left: -.375in; */
+/* margin: 0; */
+/* max-width: none; */
+/* object-fit: cover; */
+/* /\* page: full; *\/ */
+/* position: absolute; */
+/* width: 5.75in; */
+/* z-index: -1; */
 }
 pre, code, kbd, source {
-  font-size: .8em;
-  line-height: 1.2em;
+font-size: .8em;
+line-height: 1.2em;
 }
 pre, kbd {
-  border: 1px dotted black;
-  padding: .25em;
-  overflow: hidden;
-  color: white;
-  background: black;
-  border-radius: 4px;
+border: 1px dotted black;
+padding: .25em;
+overflow: hidden;
+color: white;
+background: black;
+border-radius: 4px;
 }
 #contents p {
-  font-size: 2em;
+font-size: 2em;
 }
 #contents ul {
-  display: block;
-  margin: 1em 0;
-  padding: 0;
+display: block;
+margin: 1em 0;
+padding: 0;
 }
 #contents li {
-  display: block;
+display: block;
 }
 #contents a {
-  color: inherit;
-  text-decoration: none;
+color: inherit;
+text-decoration: none;
 }
 #contents a::before {
-  /* content: target-counter(attr(href), h2-counter) '. ' target-text(attr(href)); */
+/* content: target-counter(attr(href), h2-counter) '. ' target-text(attr(href)); */
 }
 #contents a::after {
-  content: target-counter(attr(href), page);
-  float: right;
+content: target-counter(attr(href), page);
+float: right;
 }
 table {
-  border-collapse: collapse;
-  width: 100%
+border-collapse: collapse;
+width: 100%
 }
 
 thead {
-  border-bottom: .5px solid black;
+border-bottom: .5px solid black;
 }
 
 tr td {
-  border-bottom: .5px solid lightgray;
+border-bottom: .5px solid lightgray;
 }
-img.background {
-  top: -.375in;
-  left: -.375in;
-  clip: rect(.125in, 5.625in, 8.625in, .125in);
-  position: absolute;
+p.background, p.forground {
+left: -.375in;
+position: absolute;
+}
+p.background {
+top: -.375in;
+}
+img.forground {
 }
 @media only screen {
-img.background {
+  p.background {
   top: -.125in;
   left: -.125in;
-}
+  }
+  p.background img {
+  clip-path: inset(.125in .125in .125in .125in);
+  top: 0in;
+  position: inherit;
+  }
+  p.forground img {
+  bottom: 0in;
+  position: relative;
+  clip-path: inset(0in .125in .125in .125in);
+  }
+  p.forground {
+  position: inherit;
+  margin-bottom: -.125in;
+  }
+  p:last-child.forground {
+  position: inherit;
+  margin-bottom: -.75in;
+  }
   body {
-    background: lightgray;
+  background: lightgray;
   }
   section {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin: auto;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    box-shadow: 4px 4px darkgray;
-    background: white;
-    width: 5.5in;
-    z-index: -1;
-    font-size: 1.1rem;
-    width: 5.5in;
-    padding: .25in .25in .5in .25in;
-    min-height: 8.5in;
-    position: relative;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  box-shadow: 4px 4px darkgray;
+  background: white;
+  width: 5.5in;
+  z-index: -1;
+  font-size: 1.1rem;
+  width: 5.5in;
+  padding: .25in .25in .5in .25in;
+  min-height: 8.5in;
+  position: relative;
   }
   .blank {
-    display: none;
+  display: none;
   }
 }
 @media only screen and (max-width: 5.5in) {
   section {
-    width: auto;
-    min-height: 160vw;
+  width: auto;
+  min-height: 168vw;
   }
   img {
-  max-width: 87vw;
-}
-  .background {
-    width: 100vw;
+  /* max-width: 87vw; */
   }
-  .background img{
-    left: -2vw;
-    top: -2.5vw;
-    height: 165vw;
-    width: 104vw;
-    clip: rect(0in, 5.625in, 8.625in, 0in);
+  p.background {
+  /* width: 100vw; */
+  }
+  p.background img, p.forground img {
+  left: -2.5vw;
+  width: 115vw;
   }
 }
