fullpage sheets in print and web

--- a/book.css
+++ b/book.css
@@ -147,6 +147,16 @@ position: absolute;
 p.background {
 top: -.375in;
 }
+p.fullpage {
+top: -.25in;
+left: -.25in;
+position: absolute;
+}
+p.fullpageright {
+top: -.25in;
+left: -5.75in;
+position: absolute;
+}
 img.forground {
 }
 @media only screen {
@@ -154,8 +164,26 @@ img.forground {
   top: -.125in;
   left: -.125in;
   }
+  p.fullpage, p.fullpageright {
+  top: 0in;
+  left: 0in;
+  }
+  p.fullpageright {
+  top: 0in;
+  left: -5.5in;
+  }
   p.background img {
   clip-path: inset(.125in .125in .125in .125in);
+  top: 0in;
+  position: inherit;
+  }
+  p.fullpage img {
+  clip-path: inset(0in 5.5in 0in 0in);
+  top: 0in;
+  position: inherit;
+  }
+  p.fullpageright img {
+  clip-path: inset(0in 0in 0in 5.5in);
   top: 0in;
   position: inherit;
   }
